# FastAPI_Pg_Counter_App-

./: Dockerfile  README.md  docker-compose.yml  models.py  pyproject.toml  readme.md  requirements.txt
app/: __init__.py  main.py
app/templates/: index.html
database/: __init__.py  database.py  init_db.sql
